# odds

./: .gitignore  CHANGES.md  README.md  _tags  odds.opam  opam
doc/: api.odocl
lib/: dune  odds.mli
pkg/: META  pkg.ml
src/: Dice.ml  Dice.mli  DiceEffects.ml  DiceEffects.mli  dune  lexer.mll  odds.ml  odds.mli  odds.mllib  odds_parser.ml  odds_parser.mli  parser.mly  roll.ml  types.mli
test/: test.ml
tests/: dune  parser.ml  roller.ml  t.ml
