opam-version: "1.2"
maintainer: "Raphaël Proust"
authors: ["Raphaël Proust"]
dev-repo: "https://github.com/raphael-proust/odds.git"
license: "ISC"
homepage: "https://github.com/raphael-proust/odds"
bug-reports: "https://github.com/raphael-proust/odds"
tags: ["games" "dice" "random"]
available: [ ocaml-version >= "4.02.0"]
depends: [
	"dune" { >= "3.0.0" }
	"ocaml" { >= "5.0.0" }
	"menhir" { build }
	"cmdliner"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
