opam-version: "2.0"
maintainer: "Raphaël Proust"
authors: ["Raphaël Proust"]
dev-repo: "git+https://github.com/raphael-proust/odds.git"
license: "ISC"
homepage: "https://github.com/raphael-proust/odds"
bug-reports: "https://github.com/raphael-proust/odds"
tags: ["games" "dice" "random"]
depends: [
	"dune" { >= "3.0.0" }
	"ocaml" { >= "4.02.0" }
	"menhir" { build }
	"cmdliner"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
synopsis: "Dice roller"
